ready/migration-landing-zone/Artifacts/vnet.json
{
    "$schema": "https://schema.management.azure.com/schemas/2018-05-01/subscriptionDeploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "organization": {
            "type": "string",
            "metadata": {
                "description": "Organization name. For example: contoso"
            },
            "defaultValue": "contoso"
        },
        "networkIPAddressPrefix": {
            "type": "string",
            "metadata": {
                "description": "Provide first 2 octets for the network. For example: 10.0"
            },
            "defaultValue": "10.0"
        }
    },
    "variables": {
        "deploymentPrefix": "[concat(parameters('organization'), '-vnet')]",
        "resourceGroupName": "[concat('rg-', variables('deploymentPrefix'))]",
        "deploymentName": "[concat('deploy-', variables('deploymentPrefix'))]"
    },
    "resources": [
        // Creates the resource group
        {
            "type": "Microsoft.Resources/resourceGroups",
            "apiVersion": "2020-10-01",
            "name": "[variables('resourceGroupName')]",
            "location": "[deployment().location]",
            "properties": {}
        },

        // Deploy connectivity resources
        {
            "type": "Microsoft.Resources/deployments",
            "apiVersion": "2020-10-01",
            "name": "[variables('deploymentName')]",
            "resourceGroup": "[variables('resourceGroupName')]",
            "dependsOn": [
                "[subscriptionResourceId('Microsoft.Resources/resourceGroups/', variables('resourceGroupName'))]"
            ],
            "properties": {
                "mode": "Incremental",
                "expressionEvaluationOptions": {
                    "scope": "inner"
                },
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
                    "contentVersion": "1.0.0.0",
                    "parameters": {
                        "deploymentPrefix": {
                            "type": "string"
                        },
                        "networkIPAddressPrefix": {
                            "type": "string"
                        }
                    },
                    "variables": {
                        "networkName": "[concat('vnet-', parameters('deploymentPrefix'))]",
                        "bastionNsgName": "[concat('nsg-', parameters('deploymentPrefix'), '-bastion')]",
                        "networkNetAddressSpace": "[concat(parameters('networkIPAddressPrefix'),'.0.0/16')]",
                        "subnetAddressPrefixForGw": "[concat(parameters('networkIPAddressPrefix'),'.0.0/26')]",
                        "subnetAddressPrefixForAzFw": "[concat(parameters('networkIPAddressPrefix'),'.0.64/26')]",
                        "subnetAddressPrefixForBastion": "[concat(parameters('networkIPAddressPrefix'),'.0.128/26')]",
                        "subnetAddressPrefixForCore": "[concat(parameters('networkIPAddressPrefix'),'.4.0/22')]"
                    },
                    "resources": [
                        // Network Security Group for Bastion
                        {
                            "type": "Microsoft.Network/networkSecurityGroups",
                            "apiVersion": "2020-05-01",
                            "name": "[variables('bastionNsgName')]",
                            "location": "[resourceGroup().location]",
                            "comments": "Wraps the AzureBastion subnet in this regional hub. Source: https://docs.microsoft.com/azure/bastion/bastion-nsg",
                            "properties": {
                                "securityRules": [
                                    {
                                        "name": "AllowWebExperienceInBound",
                                        "properties": {
                                            "description": "Allow our users in. Update this to be as restrictive as possible.",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "Internet",
                                            "destinationPortRange": "443",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 100,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "AllowControlPlaneInBound",
                                        "properties": {
                                            "description": "Service Requirement. Allow control plane access. Regional Tag not yet supported.",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "GatewayManager",
                                            "destinationPortRange": "443",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 110,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "AllowHealthProbesInBound",
                                        "properties": {
                                            "description": "Service Requirement. Allow Health Probes.",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "AzureLoadBalancer",
                                            "destinationPortRange": "443",
                                            "destinationAddressPrefix": "*",
                                            "access": "Allow",
                                            "priority": 120,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "AllowBastionHostToHostInBound",
                                        "properties": {
                                            "description": "Service Requirement. Allow Required Host to Host Communication.",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "VirtualNetwork",
                                            "destinationPortRanges": [
                                                "8080",
                                                "5701"
                                            ],
                                            "destinationAddressPrefix": "VirtualNetwork",
                                            "access": "Allow",
                                            "priority": 130,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "DenyAllInBound",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Deny",
                                            "priority": 1000,
                                            "direction": "Inbound"
                                        }
                                    },
                                    {
                                        "name": "AllowSshToVnetOutBound",
                                        "properties": {
                                            "description": "Allow SSH out to the VNet",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationPortRange": "22",
                                            "destinationAddressPrefix": "VirtualNetwork",
                                            "access": "Allow",
                                            "priority": 100,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "AllowRdpToVnetOutBound",
                                        "properties": {
                                            "protocol": "Tcp",
                                            "description": "Unused in this RI, but required for ARM validation.",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationPortRange": "3389",
                                            "destinationAddressPrefix": "VirtualNetwork",
                                            "access": "Allow",
                                            "priority": 110,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "AllowControlPlaneOutBound",
                                        "properties": {
                                            "description": "Required for control plane outbound. Regional prefix not yet supported",
                                            "protocol": "Tcp",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationPortRange": "443",
                                            "destinationAddressPrefix": "AzureCloud",
                                            "access": "Allow",
                                            "priority": 120,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "AllowBastionHostToHostOutBound",
                                        "properties": {
                                            "description": "Service Requirement. Allow Required Host to Host Communication.",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "VirtualNetwork",
                                            "destinationPortRanges": [
                                                "8080",
                                                "5701"
                                            ],
                                            "destinationAddressPrefix": "VirtualNetwork",
                                            "access": "Allow",
                                            "priority": 130,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "AllowBastionCertificateValidationOutBound",
                                        "properties": {
                                            "description": "Service Requirement. Allow Required Session and Certificate Validation.",
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationPortRange": "80",
                                            "destinationAddressPrefix": "Internet",
                                            "access": "Allow",
                                            "priority": 140,
                                            "direction": "Outbound"
                                        }
                                    },
                                    {
                                        "name": "DenyAllOutBound",
                                        "properties": {
                                            "protocol": "*",
                                            "sourcePortRange": "*",
                                            "sourceAddressPrefix": "*",
                                            "destinationPortRange": "*",
                                            "destinationAddressPrefix": "*",
                                            "access": "Deny",
                                            "priority": 1000,
                                            "direction": "Outbound"
                                        }
                                    }
                                ]
                            }
                        },

                        // Virtual Network
                        {
                            "type": "Microsoft.Network/virtualNetworks",
                            "apiVersion": "2020-05-01",
                            "name": "[variables('networkName')]",
                            "location": "[resourceGroup().location]",
                            "dependsOn": [
                                "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bastionNsgName'))]",
                            ],
                            "properties": {
                                "addressSpace": {
                                    "addressPrefixes": [
                                        "[variables('networkNetAddressSpace')]"
                                    ]
                                },
                                "subnets": [
                                    {
                                        "name": "GatewaySubnet",
                                        "properties": {
                                            "addressPrefix": "[variables('subnetAddressPrefixForGw')]"
                                        }
                                    },
                                    {
                                        "name": "AzureFirewallSubnet",
                                        "properties": {
                                            "addressPrefix": "[variables('subnetAddressPrefixForAzFw')]"
                                        }
                                    },
                                    {
                                        "name": "BastionSubnet",
                                        "properties": {
                                            "addressPrefix": "[variables('subnetAddressPrefixForBastion')]",
                                            "networkSecurityGroup": {
                                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('bastionNsgName'))]"
                                            }
                                        }
                                    },
                                    {
                                        "name": "CoreSubnet",
                                        "properties": {
                                            "addressPrefix": "[variables('subnetAddressPrefixForCore')]"
                                        }
                                    }
                                ]
                            }
                        },
                        {
                            "type": "Microsoft.Authorization/locks",
                            "apiVersion": "2016-09-01",
                            "name": "vnetDoNotDelete",
                            "dependsOn": [
                                "[resourceId('Microsoft.Network/virtualNetworks', variables('networkName'))]"
                            ],
                            "scope": "[resourceId('Microsoft.Network/virtualNetworks', variables('networkName'))]",
                            "properties": {
                                "level": "CanNotDelete",
                                "notes": "Prevent deletion of the virtual network"
                            }
                        }
                    ],
                    "outputs": {
                        "networkId": {
                            "type": "string",
                            "value": "[resourceId('Microsoft.Network/virtualNetworks', variables('networkName'))]"
                        }
                    }
                },
                "parameters": {
                    "deploymentPrefix": {
                        "value": "[variables('deploymentPrefix')]"
                    },
                    "networkIPAddressPrefix": {
                        "value": "[parameters('networkIPAddressPrefix')]"
                    }
                }
            }
        }
    ],
    "outputs": {
        "networkId": {
            "type": "string",
            "value": "[reference(variables('deploymentName')).outputs.networkId.value]"
        }
    }
}
